# examples/example-openapi-yaml-to-json/output/openapi.json
@@ -1,186 +1,174 @@
 {
-    "openapi": "3.0.0",
-    "servers": [
-        {
-            "url": "http://petstore.swagger.io/v1"
-        }
-    ],
-    "components": {
-        "schemas": {
-            "Error": {
-                "required": [
-                    "code",
-                    "message"
-                ],
-                "type": "object",
-                "properties": {
-                    "code": {
-                        "format": "int32",
-                        "type": "integer"
-                    },
-                    "message": {
-                        "type": "string"
-                    }
-                }
-            },
-            "Pet": {
-                "required": [
-                    "id",
-                    "name"
-                ],
-                "type": "object",
-                "properties": {
-                    "id": {
-                        "format": "int64",
-                        "type": "integer"
-                    },
-                    "name": {
-                        "type": "string"
-                    },
-                    "tag": {
-                        "type": "string"
-                    }
-                }
-            },
-            "Pets": {
-                "maxItems": 100,
-                "type": "array",
-                "items": {
-                    "$ref": "#/components/schemas/Pet"
-                }
-            }
-        }
-    },
-    "info": {
-        "title": "Swagger Petstore",
-        "version": "1.0.0",
-        "license": {
-            "name": "MIT"
-        }
-    },
-    "paths": {
-        "/pets": {
-            "get": {
-                "parameters": [
-                    {
-                        "description": "How many items to return at one time (max 100)",
-                        "in": "query",
-                        "name": "limit",
-                        "required": false,
-                        "schema": {
-                            "format": "int32",
-                            "maximum": 100,
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "summary": "List all pets",
-                "tags": [
-                    "pets"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "A paged array of pets",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/Pets"
-                                }
-                            }
-                        },
-                        "headers": {
-                            "x-next": {
-                                "description": "A link to the next page of responses",
-                                "schema": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    },
-                    "default": {
-                        "description": "unexpected error",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/Error"
-                                }
-                            }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "summary": "Create a pet",
-                "tags": [
-                    "pets"
-                ],
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/Pet"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "201": {
-                        "description": "Null response"
-                    },
-                    "default": {
-                        "description": "unexpected error",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/Error"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/pets/{petId}": {
-            "get": {
-                "parameters": [
-                    {
-                        "description": "The id of the pet to retrieve",
-                        "in": "path",
-                        "name": "petId",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "summary": "Info for a specific pet",
-                "tags": [
-                    "pets"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Expected response to a valid request",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/Pet"
-                                }
-                            }
-                        }
-                    },
-                    "default": {
-                        "description": "unexpected error",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/Error"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        }
+  "openapi": "3.0.0",
+  "servers": [
+    {
+      "url": "http://petstore.swagger.io/v1"
     }
+  ],
+  "components": {
+    "schemas": {
+      "Error": {
+        "required": ["code", "message"],
+        "type": "object",
+        "properties": {
+          "code": {
+            "format": "int32",
+            "type": "integer"
+          },
+          "message": {
+            "type": "string"
+          }
+        }
+      },
+      "Pet": {
+        "required": ["id", "name"],
+        "type": "object",
+        "properties": {
+          "id": {
+            "format": "int64",
+            "type": "integer"
+          },
+          "name": {
+            "type": "string"
+          },
+          "tag": {
+            "type": "string"
+          }
+        }
+      },
+      "Pets": {
+        "maxItems": 100,
+        "type": "array",
+        "items": {
+          "$ref": "#/components/schemas/Pet"
+        }
+      }
+    }
+  },
+  "info": {
+    "title": "Swagger Petstore",
+    "version": "1.0.0",
+    "license": {
+      "name": "MIT"
+    }
+  },
+  "paths": {
+    "/pets": {
+      "get": {
+        "parameters": [
+          {
+            "description": "How many items to return at one time (max 100)",
+            "in": "query",
+            "name": "limit",
+            "required": false,
+            "schema": {
+              "format": "int32",
+              "maximum": 100,
+              "type": "integer"
+            }
+          }
+        ],
+        "summary": "List all pets",
+        "tags": ["pets"],
+        "responses": {
+          "200": {
+            "description": "A paged array of pets",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Pets"
+                }
+              }
+            },
+            "headers": {
+              "x-next": {
+                "description": "A link to the next page of responses",
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "unexpected error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "summary": "Create a pet",
+        "tags": ["pets"],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Pet"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Null response"
+          },
+          "default": {
+            "description": "unexpected error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/pets/{petId}": {
+      "get": {
+        "parameters": [
+          {
+            "description": "The id of the pet to retrieve",
+            "in": "path",
+            "name": "petId",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "summary": "Info for a specific pet",
+        "tags": ["pets"],
+        "responses": {
+          "200": {
+            "description": "Expected response to a valid request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Pet"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "unexpected error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
